 TODO
  - Save state in cookie based on name of designerfield
  - Support loading and saving of file
  - Add a visual resize option to item
  - Add Grid Wirzard
  - Add loading page when initailizing index.html en index.php
 -  Make toolbox global if required, so only one exits by screen
 -  Label is not selected after alter
 -  BBar is converted to string instead of object
 -  SetConfig calls jsonInit 1 time to mutch 
 -  Add loading indicator in jsonpanel

 Change History:
 Version 2.0.4:
  + Loading indicator
  + Documentation window added under Question Mark
  + Added loadConfig method for loading from URL
  + Added autoLoad option in config to load json from URL
  + Added Cookie files
  - Remove debug message Created, for special scope objects
  * Config is now shown in window
  * Fixed layout problem
  
 Version 2.0.3-beta3:
  * Fixed Empty designer will not show field anymore in code tree
  * Changed the accordion to tabpanel
  * Fixed problem that not all code parts where not shown
  * Fixed problem that in IE the code words where not loaded
 
 Version 2.0.2-beta2: 
  * Added delete element as context menu
  * Added Undo and Redo functions
  * Added CodeTree
  * Added "scope.<VAR>" in json object, so you can create local objects 
  * Fixed Problem required_js in json was not loaded
  * Fixed copy to clipboard did not work
  * Fixed redraw problems for containers
  * Fixed problems in editableJson code
  
 Version 2.0.0-beta1: 
  * Complety rebuild as toolbox