@@ -6,10 +6,11 @@
   - Add loading page when initailizing index.html en index.php
  -  Make toolbox global if required, so only one exits by screen
  -  Label is not selected after alter
- -  BBar is converted to string instead of object
  -  SetConfig calls jsonInit 1 time to mutch 
  -  Add loading indicator in jsonpanel
-
+ -  Add warning when adding second item to root
+ - Removed duplicate items from selection list.
+ 
  Change History:
  Version 2.0.4:
   + Loading indicator
@@ -18,6 +19,7 @@
   + Added autoLoad option in config to load json from URL
   + Added Cookie files
   - Remove debug message Created, for special scope objects
+  
   * Config is now shown in window
   * Fixed layout problem
   
